First working tape intersection detection.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,9 @@ cs_add_executable(detector_integral src/detector_integral.cpp)
 cs_add_executable(intrinsic src/INTRINSIC_CAL.cpp)
 cs_add_executable(intrinsic_detect src/INTRINSIC_DETECT.cpp)
 
+
+cs_add_executable(lester_shapematch src/lester_shapematch.cpp)
+
 #cs_add_executable(harris_corners src/harris_corners.cpp)
 #the following is required, if desire to link a node in this package with a library created in this same package
 # edit the arguments to reference the named node and named library within this package
@@ -87,6 +90,9 @@ target_link_libraries( detector_integral ${OpenCV_LIBS})
 
 target_link_libraries(intrinsic ${OpenCV_LIBS} ${CERES_LIBRARIES})
 target_link_libraries(intrinsic_detect circle_detector ${OpenCV_LIBS} ${CERES_LIBRARIES})
+
+
+target_link_libraries(lester_shapematch ${OpenCV_LIBS} ${CERES_LIBRARIES})
 
 cs_install()
 cs_export()
