--- a/package.xml
+++ b/package.xml
@@ -46,12 +46,14 @@
 <build_depend>cv_bridge</build_depend>
 <build_depend>sensor_msgs</build_depend>
 <build_depend>std_srvs</build_depend>
+<build_depend>pcl_ros</build_depend>
   <run_depend>roscpp</run_depend>
 <run_depend>image_transport</run_depend>
 <run_depend>cv_bridge</run_depend>
 <run_depend>sensor_msgs</run_depend>
 <run_depend>std_srvs</run_depend>
 <run_depend>template_matching_py</run_depend>
+<run_depend>pcl_ros</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
