Fist attempt at monotarget extrinsic calibration.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ cs_add_executable(intrinsic_detect src/INTRINSIC_DETECT.cpp)
 
 
 cs_add_executable(lester_shapematch src/lester_shapematch.cpp)
+cs_add_executable(extrinsic_cam src/CAMERA_MONOTARGET_CAL.cpp)
 
 #cs_add_executable(harris_corners src/harris_corners.cpp)
 #the following is required, if desire to link a node in this package with a library created in this same package
@@ -93,6 +94,7 @@ target_link_libraries(intrinsic_detect circle_detector ${OpenCV_LIBS} ${CERES_LI
 
 
 target_link_libraries(lester_shapematch ${OpenCV_LIBS} ${CERES_LIBRARIES})
+target_link_libraries(extrinsic_cam ${OpenCV_LIBS} ${CERES_LIBRARIES})
 
 cs_install()
 cs_export()
