--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,8 @@ cs_add_executable(lester_shapematch src/lester_shapematch.cpp)
 cs_add_executable(lester_aruco src/lester_aruco.cpp)
 cs_add_executable(extrinsic_cam src/CAMERA_MONOTARGET_CAL.cpp)
 
+cs_add_executable(roi_gen src/roi_gen.cpp)
+
 #cs_add_executable(harris_corners src/harris_corners.cpp)
 #the following is required, if desire to link a node in this package with a library created in this same package
 # edit the arguments to reference the named node and named library within this package
@@ -103,6 +105,9 @@ target_link_libraries(intrinsic_detect circle_detector ${OpenCV_LIBS} ${CERES_LI
 target_link_libraries(lester_shapematch ${OpenCV_LIBS})
 target_link_libraries(lester_aruco ${OpenCV_LIBS})
 target_link_libraries(extrinsic_cam ${OpenCV_LIBS} ${CERES_LIBRARIES})
+
+
+target_link_libraries(roi_gen ${OpenCV_LIBS})
 
 cs_install()
 cs_export()
