Added lidar-to-camera calibration.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,9 @@ cs_add_executable(extrinsic_cam src/CAMERA_MONOTARGET_CAL.cpp)
 cs_add_executable(roi_gen src/roi_gen.cpp)
 cs_add_executable(tapes_detect src/tapes_detect.cpp)
 
+
+cs_add_executable(lidar src/LIDAR_CAMERA.cpp)
+
 #cs_add_executable(harris_corners src/harris_corners.cpp)
 #the following is required, if desire to link a node in this package with a library created in this same package
 # edit the arguments to reference the named node and named library within this package
@@ -110,6 +113,9 @@ target_link_libraries(extrinsic_cam ${OpenCV_LIBS} ${CERES_LIBRARIES})
 
 target_link_libraries(roi_gen ${OpenCV_LIBS})
 target_link_libraries(tapes_detect ${OpenCV_LIBS})
+
+
+target_link_libraries(lidar ${OpenCV_LIBS} ${CERES_LIBRARIES})
 
 cs_install()
 cs_export()
